Improve styling of next and previous buttons

--- a/src/app/flashcards/flashcards.component.css
+++ b/src/app/flashcards/flashcards.component.css
@@ -1,5 +1,5 @@
-.flashcard-button-container .btn {
-	display: block;
+.flashcard-button-container {
+	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
 }
