--- a/src/app/flashcards/flashcards.component.html
+++ b/src/app/flashcards/flashcards.component.html
@@ -36,8 +36,11 @@
 	</div>
 
 	<div class="row">
-		<div class="col-md-12 flashcard-button-container">
-			<button class="btn" type="button" (click)="getNextFlashcard()" >Next</button>
+		<div class="col-md-12">
+			<div class="flashcard-button-container">
+				<button class="btn" type="button" (click)="getPreviousFlashcard()" >Previous</button>&nbsp;
+				<button class="btn" type="button" (click)="getNextFlashcard()" >Next</button>
+			</div>
 		</div>
 	</div>
 </div>
