Allow creation of flashcards

--- a/src/app/flashcards/flashcards.component.html
+++ b/src/app/flashcards/flashcards.component.html
@@ -40,7 +40,8 @@
 			<div class="flashcard-button-container">
 				<button class="btn" type="button" (click)="getPreviousFlashcard()" >Previous</button>&nbsp;
 				<button class="btn" type="button" (click)="getRandomFlashcard()" >Random</button>&nbsp;
-				<button class="btn" type="button" (click)="getNextFlashcard()" >Next</button>
+				<button class="btn" type="button" (click)="getNextFlashcard()" >Next</button>&nbsp;
+				<button class="btn" type="button" (click)="openDialog()" ><i class="fas fa-plus"></i></button>
 			</div>
 		</div>
 	</div>
